# uni-computer-science

./: .gitmodules  README.md
AP/Labs/Lab2/: 14.py  18.py
AP/Labs/Lab3-5/: input.txt  main.py  output.txt
AP/Practical Exam - 10/: main.py
Analytic Geometry/Lectures + Seminars/week 10/: No lectures or seminar.docx
Computational Logic/Exam Prep/Exam/: Exam-Computational_Logic-Subjects_2020-2021.doc  Models_subjects_exam_Computational-Logic.doc
Computational Logic/Exam Prep/Exercises/: Exercises_Predicate_Logic_2020-2021.doc.docx  Exercises_Propositional_Logic_2020-2021.docx  Exercises_Resolution_proposition_2020-2021.docx
Computational Logic/Lectures/Lecture 1/: Lecture1_2020-2021.pptx  Overview_Computational Logic discipline.pptx
Computational Logic/Lectures/Lecture 11/: Lecture11_Veitch-Karnaugh_2020-2021.pptx
Computational Logic/Lectures/Lecture 2/: Lecture2_2020-2021.pptx
Computational Logic/Lectures/Lecture 3/: Lecture3_Propositional_logic_2020-2021.pptx  (+1 more)
Computational Logic/Optional Homework/: Optional_homework_Implementation_Operations_Conversions.doc
Computational Logic/Project/: Project.docx
Computational Logic/Seminars/: Seminar 2.doc  Seminar 3.doc
First Year/OOP/Labs/laboratory6-rusuraluca/: CMakeLists.txt
First Year/OOP/Labs/laboratory6-rusuraluca/Laboratory6/: Date.h  DynamicArray.h  FilteringCriteria.cpp  FilteringCriteria.h  FilteringCriteriaTypeAndPrice.cpp  FilteringPrice.h  FilteringType.h  Offer.cpp  Offer.h  main.cpp
First Year/OOP/Labs/laboratory6-rusuraluca/Laboratory6/Tests/: DynamicArrayTest.h  FilteringTest.cpp  FilteringTest.h  OfferTest.cpp
First Year/OOP/PodcastsInventory/: CMakeLists.txt  main.cpp
First Year/OOP/PodcastsInventory/Business/: Service.cpp
First Year/OOP/PodcastsInventory/Domain/: Recording.h
First Year/OOP/PodcastsInventory/Tests/: Tests.cpp  Tests.h
First Year/OOP/PodcastsInventory/UI/: UI.cpp  UI.h
First Year/OOP/PodcastsInventory/html/: _recording_8h_source.html  _service_8h_source.html  _tests_8h_source.html  _u_i_8h_source.html  _vlog_8h_source.html  class_controller-members.html  class_controller.html  class_file.html  class_file_exception-members.html  class_file_exception.html  class_file_repo-members.html  class_podcast-members.html  class_podcast.html  class_repo.html  class_repo_exception-members.html  class_repo_exception.html  class_tests-members.html  class_validator_podcast.html  class_validator_vlog-members.html  dir_33c78a012c8d08979f57a54a07694c46.html  dir_53ff6e473d46d4e442ba5a7ce9f895e3.html  dir_8c888e3f1190d8e08b273c29d1443e32.html  dir_92783a7f0bdbd695c15c971f7f535748.html  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_9bb06a24f5d0965d47d184d3d53f5a56.html  dir_bd36a8115b9e41621e8e7d4447019e35.html  dir_d403198d2aa38de87971f2789d60a3dd.html  index.html
First Year/OOP/PodcastsInventory/html/search/: all_3.js  all_5.js  all_a.js  all_c.js  classes_0.js  classes_3.js  classes_4.js  classes_7.js  functions_1.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js
First Year/OOP/PodcastsInventory/latex/: _exceptions_8h_source.tex  _file_repo_8h_source.tex  _podcast_8h_source.tex  _repo_8h_source.tex  _service_8h_source.tex  _vlog_8h_source.tex  class_controller.tex  class_podcast.eps  class_recording.tex  class_repo.eps  class_repo_exception.tex  class_service.tex  class_validation_exception.tex  class_validator_recording.tex  class_vlog.eps  class_vlog.tex  refman.tex
OOP/CrazyTaxi/: CrazyTaxi.pro  gui.cpp
OOP/CrazyTaxiClasses/: CMakeLists.txt
OOP/Image_Processing/: CMakeLists.txt  Doxyfile.bak  DrawingShapes.h  Tests.h  feep_conv_gauss.ascii.pgm  feep_conv_vert.ascii.pgm  feep_draw_circle.ascii.pgm  mona_lisa_conv_horiz.ascii.pgm  mona_lisa_conv_ident.ascii.pgm  mona_lisa_gc_minus.ascii.pgm
OOP/Image_Processing/ImageProcessing/: ConvolutionProcessor.h  GammaCorrectionProcessor.h
OOP/Image_Processing/Utils/: Point.h  Size.h  Vector.cpp  Vector.h
OOP/Image_Processing/html/: _image_processes_8h_source.html  class_drawing_shapes-members.html  class_drawing_shapes.html  class_tests-members.html  classes.html
OOP/Image_Processing/html/search/: all_0.js  classes_1.js  searchdata.js
OOP/Image_Processing/latex/: _image_processes_8h_source.tex  class_drawing_shapes.tex
OOP/Labs/laboratory8-rusuraluca/: CMakeLists.txt
OOP/Labs/laboratory8-rusuraluca/Domain/: Cruise.cpp  Date.cpp  Offer.cpp
OOP/Labs/laboratory8-rusuraluca/Interface/: FilteringCriteria.h  FilteringCriteriaAnd.cpp  FilteringCriteriaOr.h  FilteringDeparture.h  FilteringPrice.cpp  FilteringType.cpp  FilteringType.h
OOP/PodcastsInventory/: config-file
OOP/PodcastsInventoryQt/: FileRepo.cpp  Recording.cpp
OOP/QtRecordingInventory/: inventory.csv  keypress.cpp  main.cpp  mainwindow.cpp  mainwindow.h
OOP/Word_Puzzle/: CMakeLists.txt
OOP/laboratoryproject_rusuraluca/: CMakeLists.txt  main.cpp
OOP/laboratoryproject_rusuraluca/Controller/: Controller.cpp  Controller.h
OOP/laboratoryproject_rusuraluca/Domain/: Recording.h
OOP/laboratoryproject_rusuraluca/Exceptions/: Exceptions.h
OOP/laboratoryproject_rusuraluca/UI/: UI.cpp  UI.h
Second Year/Databases/: IKEA Diagram
Second Year/ISS/: Untitled Diagram.drawio
Third Year/PDP/Labs/pdp_lab7/: CMakeLists.txt  README.md  mpi_karasuba.cpp  mpi_naive.cpp  output.txt
Third Year/PDP/Labs/pdp_lab7_test/: CMakeLists.txt  mpi_karasuba.cpp  mpi_naive.cpp
(+1855 files in other folders)
